--- a/index.html
+++ b/index.html
@@ -106,5 +106,32 @@
                 </div>
             </div>
         </section>
+       <section class="ad-branding"> 
+        <div class="ad-brand">
+        <h1>Advertising,Branding <span class="marketing-style">& Marketing</span></h1>
+        <img src="images/Blog.png" alt="">
+        <div class="contact-us">
+            <a class="donate-style" href="">Contact Us</a>
+        </div>
+    </div></section>
+        <section class="update-part">
+            <div class="money-text">
+                <h1>Get my updates</h1>
+                <p id="donate-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum ducimus nobis illo vitae cumque inventore! </p>
+                <div class="form-style">
+                    <form class="style-email">
+                        <input type="text" id="email-id" required>
+                        <label for="">email</label>
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="footer-style">
+                <h1>Be humble</h1>
+                <h4>I did it</h4>
+            </div>
+        </footer>
 </body>
 </html>
